@@ -1,3 +1,14 @@
+2006-03-27  Matthias Clasen  <mclasen@redhat.com>
+
+	Add support for floating point numbers to goption.
+	(#329548, Behdad Esfahbod, patch by Antoine Dopffer and 
+	 Dom Lachowicz)
+
+	* glib/goption.h:
+	* glib/goption.c: Support double arguments.
+
+	* tests/option-test.c: Test double arguments.`
+
 2006-03-26  Matthias Clasen  <mclasen@redhat.com>
 
         * glib/goption.c (g_option_context_new): Improve the description
